Fixing the styles on the sign up/sign in/password forms on mobile

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -1240,17 +1240,16 @@ form
 
 /* ==================================== SIGN IN / SIGN OUT */
 
-#signIn, #signUp
+#signIn, #signUp, #password
 
   h1
 
   form
     label
       text-align: left!important
-
-  p.switch
-    font-weight: 600
-    text-align: center
+    .actions > *
+      float: right
+      margin-left: 1em
 
   #user_is_group
     text-align: left
@@ -1522,6 +1521,25 @@ header .navbar .navbar-collapse ul.nav li a.feedback
 
   #scrapbookInstructions
     width: 90%
+
+  #signIn, #signUp, #password
+    form
+      .actions > *
+        margin: 0 0 1em 0
+        width: 100%
+        float: none
+
+      *:last-child
+        margin-bottom: 0
+
+    #signposting
+      padding: 1em 0 1em !important
+
+    #extraPanel .help-tips
+      font-size: 0.9em
+      margin: 0 0.5em
+      padding: 1em 1em 1em 2.5em
+
 
 
 /* SCREEN SIZE: MOBILES */
